feat: URL scrape endpoint (#17)
